@@ -11,5 +11,7 @@ DB_NAME=LXD_Manager
 # DB_PASS=lxdManagerPasswordComplex321
 # DB_NAME=LXD_Manager
 
+LXD_CERTS_DIR=/var/www/LxdMosaic/sensitiveData/certs/
+
 CERT_PATH=/etc/ssl/certs/ssl-cert-snakeoil.pem
 CERT_PRIVATE_KEY=/etc/ssl/private/ssl-cert-snakeoil.key
