@@ -1,7 +1,0 @@
-<?php
-namespace dhope0000\LXDClient\Constants;
-
-class Constants
-{
-    const CERTS_DIR =  __DIR__ . "/../../sensitiveData/certs/" ;
-}
